k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: weather-app-service
  labels:
    app: weather-app
spec:
  selector:
    app: weather-app
  ports:
  - name: http
    port: 80
    targetPort: 4000
    protocol: TCP
  type: ClusterIP
